--- a/saves/lol.yaml
+++ b/saves/lol.yaml
@@ -14,7 +14,9 @@ board: !ruby/object:Board
       - 0
       - 1
       symbol: " ♞ "
-      available_moves: []
+      available_moves:
+      - c3
+      - a3
     - !ruby/object:Bishop
       color: black
       location:
@@ -49,7 +51,9 @@ board: !ruby/object:Board
       - 0
       - 6
       symbol: " ♞ "
-      available_moves: []
+      available_moves:
+      - h3
+      - f3
     - !ruby/object:Rook
       color: black
       location:
@@ -63,7 +67,9 @@ board: !ruby/object:Board
       - 1
       - 0
       symbol: " ♟︎ "
-      available_moves: []
+      available_moves:
+      - a3
+      - a4
       is_moved: false
     - !ruby/object:Pawn
       color: black
@@ -71,7 +77,9 @@ board: !ruby/object:Board
       - 1
       - 1
       symbol: " ♟︎ "
-      available_moves: []
+      available_moves:
+      - b3
+      - b4
       is_moved: false
     - !ruby/object:Pawn
       color: black
@@ -79,7 +87,9 @@ board: !ruby/object:Board
       - 1
       - 2
       symbol: " ♟︎ "
-      available_moves: []
+      available_moves:
+      - c3
+      - c4
       is_moved: false
     - !ruby/object:Pawn
       color: black
@@ -87,7 +97,9 @@ board: !ruby/object:Board
       - 1
       - 3
       symbol: " ♟︎ "
-      available_moves: []
+      available_moves:
+      - d3
+      - d4
       is_moved: false
     - !ruby/object:Pawn
       color: black
@@ -95,7 +107,9 @@ board: !ruby/object:Board
       - 1
       - 4
       symbol: " ♟︎ "
-      available_moves: []
+      available_moves:
+      - e3
+      - e4
       is_moved: false
     - !ruby/object:Pawn
       color: black
@@ -103,7 +117,9 @@ board: !ruby/object:Board
       - 1
       - 5
       symbol: " ♟︎ "
-      available_moves: []
+      available_moves:
+      - f3
+      - f4
       is_moved: false
     - !ruby/object:Pawn
       color: black
@@ -111,7 +127,9 @@ board: !ruby/object:Board
       - 1
       - 6
       symbol: " ♟︎ "
-      available_moves: []
+      available_moves:
+      - g3
+      - g4
       is_moved: false
     - !ruby/object:Pawn
       color: black
@@ -119,24 +137,10 @@ board: !ruby/object:Board
       - 1
       - 7
       symbol: " ♟︎ "
-      available_moves: []
+      available_moves:
+      - h3
+      - h4
       is_moved: false
-  - - "\e[47m   \e[0m"
-    - "\e[40m   \e[0m"
-    - "\e[47m   \e[0m"
-    - "\e[40m   \e[0m"
-    - "\e[47m   \e[0m"
-    - "\e[40m   \e[0m"
-    - "\e[47m   \e[0m"
-    - "\e[40m   \e[0m"
-  - - "\e[40m   \e[0m"
-    - "\e[47m   \e[0m"
-    - "\e[40m   \e[0m"
-    - "\e[47m   \e[0m"
-    - "\e[40m   \e[0m"
-    - "\e[47m   \e[0m"
-    - "\e[40m   \e[0m"
-    - "\e[47m   \e[0m"
   - - "\e[47m   \e[0m"
     - "\e[40m   \e[0m"
     - "\e[47m   \e[0m"
@@ -156,13 +160,29 @@ board: !ruby/object:Board
   - - !ruby/object:Pawn
       color: white
       location:
-      - 6
+      - 4
       - 0
       symbol: " ♙ "
       available_moves:
       - a6
       - a5
-      is_moved: false
+      is_moved: true
+    - "\e[40m   \e[0m"
+    - "\e[47m   \e[0m"
+    - "\e[40m   \e[0m"
+    - "\e[47m   \e[0m"
+    - "\e[40m   \e[0m"
+    - "\e[47m   \e[0m"
+    - "\e[40m   \e[0m"
+  - - "\e[40m   \e[0m"
+    - "\e[47m   \e[0m"
+    - "\e[40m   \e[0m"
+    - "\e[47m   \e[0m"
+    - "\e[40m   \e[0m"
+    - "\e[47m   \e[0m"
+    - "\e[40m   \e[0m"
+    - "\e[47m   \e[0m"
+  - - "\e[47m   \e[0m"
     - !ruby/object:Pawn
       color: white
       location:
@@ -296,12 +316,12 @@ board: !ruby/object:Board
   king_white: *1
   king_black: *2
 winner:
-player1: &3 !ruby/object:Player
-  name: ma
+player1: !ruby/object:Player
+  name: Ma
   color: white
   computer_game: false
-player2: !ruby/object:Player
-  name: gr
+player2: &3 !ruby/object:Player
+  name: Gr
   color: black
   computer_game: false
 current_player: *3
